--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,23 @@
 Package: gridpattern
 Type: Package
 Title: Grid Grobs with Patterns
-Version: 0.0.0
+Version: 0.1.0-1
 Authors@R: c(person("Trevor L", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com"),
-             person("Mike", "FC", role = "aut", comment = "Code extracted from ggpattern package"))
+             person("Mike", "FC", role = "aut", comment = "Code extracted from ggpattern package"),
+             person("Thomas Lin", "Pedersen", role = "ctb", comment = "data_frame() copied from ggplot2 package"))
 Description: Grid grobs with patterns.
 URL: http://github.com/trevorld/gridpattern
 BugReports: http://github.com/trevorld/gridpattern/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
 RoxygenNote: 7.1.1
+Depends:
+    R (>= 3.4.0)
 Imports:
-    grid
+    grDevices,
+    grid,
+    sf,
+    utils
+Suggests:
+    testthat,
+    vdiffr
