--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gridpattern
 Type: Package
 Title: Grid Grobs with Patterns
-Version: 0.1.0-1
+Version: 0.1.0-2
 Authors@R: c(person("Trevor L", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com"),
              person("Mike", "FC", role = "aut", comment = "Code extracted from ggpattern package"),
              person("Thomas Lin", "Pedersen", role = "ctb", comment = "data_frame() copied from ggplot2 package"))
@@ -16,6 +16,7 @@ Depends:
 Imports:
     grDevices,
     grid,
+    gridGeometry,
     sf,
     utils
 Suggests:
