--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,14 @@ S3method(makeContext,pattern)
 export(grid.pattern)
 export(patternGrob)
 import(grid)
+import(magick)
 import(sf)
+importFrom(grDevices,col2rgb)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,png)
+importFrom(grDevices,rgb)
+importFrom(rlang,"%||%")
+importFrom(rlang,abort)
+importFrom(rlang,warn)
 importFrom(utils,hasName)
 importFrom(utils,tail)
