feat: Support custom array-based patterns
Closes #2

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ addons:
     apt:
         packages:
             - libgdal-dev
+            - libmagick++-dev
             - libudunits2-dev
 r_github_packages:
     - r-lib/covr
