--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: gridpattern
 Type: Package
 Title: Grid Grobs with Patterns
 Version: 0.1.0-12
-Authors@R: c(person("Trevor L", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com"),
-             person("Mike", "FC", role = "aut", comment = "Code extracted from ggpattern package"),
-             person("Thomas Lin", "Pedersen", role = "ctb", comment = "data_frame() copied from ggplot2 package"))
+Authors@R: c(person("Mike", "FC", role = "aut", comment = "Patterns extracted from ggpattern"),
+        person("Trevor L", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com"),
+        person("Thomas Lin", "Pedersen", role = "ctb", comment = "new_data_frame() copied from ggplot2"))
 Description: Grid grobs with patterns.
 URL: http://github.com/trevorld/gridpattern, https://trevorldavis.com/R/gridpattern
 BugReports: http://github.com/trevorld/gridpattern/issues
