fix: Document the built-in geometry patterns
progress on #11

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 S3method(makeContent,pattern)
 S3method(makeContext,pattern)
 export(grid.pattern)
+export(grid.pattern_circle)
+export(grid.pattern_crosshatch)
+export(grid.pattern_stripe)
 export(patternGrob)
 import(grid)
 import(magick)
