--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: gridpattern
 Type: Package
-Title: Grid Grobs with Patterns
-Version: 0.1.0-12
+Title: Patterned Grid Grobs
+Version: 0.1.0-13
 Authors@R: c(person("Mike", "FC", role = "aut", comment = "Patterns extracted from ggpattern"),
         person("Trevor L", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com"),
         person("Thomas Lin", "Pedersen", role = "ctb", comment = "new_data_frame() copied from ggplot2"))
-Description: Grid grobs with patterns.
+Description: Patterned grid grobs.
 URL: http://github.com/trevorld/gridpattern, https://trevorldavis.com/R/gridpattern
 BugReports: http://github.com/trevorld/gridpattern/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Depends:
     R (>= 3.4.0)
