feat: Add individual pattern grob functions
closes #11

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,17 @@ S3method(makeContext,pattern)
 export(grid.pattern)
 export(grid.pattern_circle)
 export(grid.pattern_crosshatch)
+export(grid.pattern_gradient)
+export(grid.pattern_image)
+export(grid.pattern_magick)
+export(grid.pattern_placeholder)
+export(grid.pattern_plasma)
 export(grid.pattern_stripe)
+export(magick_pattern_intensity_names)
+export(magick_pattern_names)
+export(magick_pattern_stripe_names)
 export(patternGrob)
+export(placeholder_names)
 import(grid)
 import(magick)
 import(sf)
