feat: 'regular_polygon' pattern
* 'grid.pattern_regular_polygon()' provides support
  for regular polygon patterns
* can be used to achieve a variety of 'tiling' patterns (#13)

closes #20

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(grid.pattern_image)
 export(grid.pattern_magick)
 export(grid.pattern_placeholder)
 export(grid.pattern_plasma)
+export(grid.pattern_regular_polygon)
 export(grid.pattern_stripe)
 export(magick_pattern_intensity_names)
 export(magick_pattern_names)
@@ -25,4 +26,5 @@ importFrom(rlang,"%||%")
 importFrom(rlang,abort)
 importFrom(rlang,warn)
 importFrom(utils,hasName)
+importFrom(utils,head)
 importFrom(utils,tail)
