--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(grid.pattern_stripe)
 export(magick_pattern_intensity_names)
 export(magick_pattern_names)
 export(magick_pattern_stripe_names)
+export(mean_col)
 export(patternGrob)
 export(placeholder_names)
 import(grid)
