fix: Correct 'abort()' messages
* Correct 'abort()' messages with 'paste0()' or 'glue::glue()'
* We now import 'glue::glue()' and 'rlang::inform()'
* We now always use 'abort()' / 'inform()' instead of 'stop()'
/ 'message()'

closes #19

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,12 +19,14 @@ export(mean_col)
 export(patternGrob)
 export(placeholder_names)
 import(grid)
+importFrom(glue,glue)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(grDevices,rgb)
 importFrom(rlang,"%||%")
 importFrom(rlang,abort)
+importFrom(rlang,inform)
 importFrom(rlang,warn)
 importFrom(utils,hasName)
 importFrom(utils,head)
