refactor!: Rename exported '*_names' to 'names_*'
* 'hex_names' -> 'names_hex'
* 'magick_pattern_names' -> 'names_magick'
* 'magick_pattern_intensity_names' -> 'names_magick_intensity'
* 'magick_pattern_stripe_names' -> 'names_magick_stripe'
* 'placeholder_names' -> 'names_placeholder'
* 'square_names' -> 'names_square'
* 'weave_names' -> 'names_weave'

BREAKING CHANGE: those exported character vectors names
                 listed above have been changed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,18 +16,18 @@ export(grid.pattern_plasma)
 export(grid.pattern_regular_polygon)
 export(grid.pattern_stripe)
 export(grid.pattern_weave)
-export(hex_names)
-export(magick_pattern_intensity_names)
-export(magick_pattern_names)
-export(magick_pattern_stripe_names)
 export(mean_col)
+export(names_hex)
+export(names_magick)
+export(names_magick_intensity)
+export(names_magick_stripe)
+export(names_placeholder)
+export(names_square)
+export(names_weave)
 export(patternGrob)
 export(pattern_hex)
 export(pattern_square)
 export(pattern_weave)
-export(placeholder_names)
-export(square_names)
-export(weave_names)
 import(grid)
 importFrom(glue,glue)
 importFrom(grDevices,col2rgb)
