feat: 'polygon_tiling' pattern
* `grid.pattern_polygon_tiling()` provides a new
  "polygon_tiling" geometry pattern
  that draws a few pre-selected polygon tilings.

  * herringbone
  * hexagonal
  * pythagorean
  * square
  * triangular
  * trihexagonal
  * truncated_hexagonal
  * truncated_square

* Supports `fill` of 1, 2, or 3 colors
  with the first colors (weakly) occupying more area
* Size of tiling controlled by `spacing`

closes #13

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(grid.pattern_image)
 export(grid.pattern_magick)
 export(grid.pattern_placeholder)
 export(grid.pattern_plasma)
+export(grid.pattern_polygon_tiling)
 export(grid.pattern_regular_polygon)
 export(grid.pattern_stripe)
 export(grid.pattern_weave)
