feat: 'star_scale()' and 'star_angle()'
* `star_scale()` computes star `scale` value given
  an internal or external angle.  `star_angle()` computes
  star angle (internal or external) given a `scale` value.
* [grid.pattern_regular_polygon()] parameterizes regular star polygons
  with the number of its external vertices and a `scale` that equals the
  fraction of the radius of the circle that circumscribes the interior vertices
  divided by the radius of the circle that circumscribes the exterior vertices.
  These helper functions help convert between that parameterization
  and either the internal or external angle of the regular star polygon.

closes #39

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(patternGrob)
 export(pattern_hex)
 export(pattern_square)
 export(pattern_weave)
+export(star_angle)
+export(star_scale)
 import(grid)
 importFrom(glue,glue)
 importFrom(grDevices,col2rgb)
