--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(names_magick)
 export(names_magick_intensity)
 export(names_magick_stripe)
 export(names_placeholder)
+export(names_polygon_tiling)
 export(names_square)
 export(names_weave)
 export(patternGrob)
