--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(grid.pattern_crosshatch)
 export(grid.pattern_gradient)
 export(grid.pattern_image)
 export(grid.pattern_magick)
+export(grid.pattern_pch)
 export(grid.pattern_placeholder)
 export(grid.pattern_plasma)
 export(grid.pattern_polygon_tiling)
