feat: 'names_pattern' returns all builtin patterns
* character vector 'names_pattern' returns all builtin patterns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(names_hex)
 export(names_magick)
 export(names_magick_intensity)
 export(names_magick_stripe)
+export(names_pattern)
 export(names_placeholder)
 export(names_polygon_tiling)
 export(names_square)
