feat: Add 'text' pattern
* Assuming the right graphic devices should support making
  patterns with arbitrary Unicode glyphs
* Uses `clippingPathGrob()` to clip to boundary
* Since characters are not of uniform size within the same font
  much less between fonts do not attempt sensible "density" value
  but instead parameterize glyph sizes with "size"
  (interpreted as a ``textGrob`` "fontsize")

closes #42

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(grid.pattern_plasma)
 export(grid.pattern_polygon_tiling)
 export(grid.pattern_regular_polygon)
 export(grid.pattern_stripe)
+export(grid.pattern_text)
 export(grid.pattern_weave)
 export(mean_col)
 export(names_hex)
