--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(grid.pattern_placeholder)
 export(grid.pattern_plasma)
 export(grid.pattern_polygon_tiling)
 export(grid.pattern_regular_polygon)
+export(grid.pattern_rose)
 export(grid.pattern_stripe)
 export(grid.pattern_text)
 export(grid.pattern_weave)
