--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(grid.pattern_regular_polygon)
 export(grid.pattern_rose)
 export(grid.pattern_stripe)
 export(grid.pattern_text)
+export(grid.pattern_wave)
 export(grid.pattern_weave)
 export(mean_col)
 export(names_hex)
