--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gridpattern
 Type: Package
 Title: 'grid' Pattern Grobs
-Version: 0.2.1
+Version: 0.3.0-1
 Authors@R: c(person("Mike", "FC", role = "aut", comment = "Patterns extracted from ggpattern"),
         person("Trevor L", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com"),
         person("Thomas Lin", "Pedersen", role = "ctb", comment = "new_data_frame() copied from ggplot2"))
@@ -18,7 +18,6 @@ Imports:
     glue,
     grDevices,
     grid,
-    magick,
     memoise,
     png,
     rlang,
@@ -27,6 +26,7 @@ Imports:
 Suggests:
     ambient,
     knitr,
+    magick,
     ragg,
     rmarkdown,
     testthat,
