feat: export 'guess_has_R4.1_features()'
* We now export 'guess_has_R4.1_features()'
* It now also returns TRUE for "bmp" (cairo), "jpeg" (cairo),
 "tiff" (cairo), and "cairo_ps" graphics devices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(grid.pattern_stripe)
 export(grid.pattern_text)
 export(grid.pattern_wave)
 export(grid.pattern_weave)
+export(guess_has_R4.1_features)
 export(mean_col)
 export(names_hex)
 export(names_magick)
@@ -51,4 +52,5 @@ importFrom(rlang,inform)
 importFrom(rlang,warn)
 importFrom(utils,hasName)
 importFrom(utils,head)
+importFrom(utils,packageVersion)
 importFrom(utils,tail)
