--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gridpattern
 Type: Package
 Title: 'grid' Pattern Grobs
-Version: 0.5.2-1
+Version: 0.5.2-2
 Authors@R: c(person("Mike", "FC", role = "aut", comment = "Code/docs adapted from ggpattern"),
         person("Trevor L", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com"),
         person("Thomas Lin", "Pedersen", role = "ctb", comment = "new_data_frame() copied from ggplot2"))
@@ -27,8 +27,9 @@ Suggests:
     ambient,
     knitr,
     magick,
-    ragg,
+    ragg (>= 1.2.0),
     rmarkdown,
+    svglite (>= 2.1.0),
     testthat,
     vdiffr
 VignetteBuilder: knitr, rmarkdown
