--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(star_scale)
 import(grid)
 importFrom(glue,glue)
 importFrom(grDevices,col2rgb)
+importFrom(grDevices,dev.capabilities)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(grDevices,rgb)
