feat: 'reset_image_cache()'
* `reset_image_cache()` resets the image cache used by `grid.pattern_image()`
   and `grid.pattern_placeholder()` to store images (#63).

closes #25, closes #63

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: gridpattern
 Type: Package
 Title: 'grid' Pattern Grobs
-Version: 1.0.4
+Version: 1.1.0
 Authors@R: c(person("Mike", "FC", role = "aut", comment = "Code/docs adapted from ggpattern"),
-        person("Trevor L.", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com",
+        person("Trevor L", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com",
                comment = c(ORCID = "0000-0001-6341-4639")),
         person("Thomas Lin", "Pedersen", role = "ctb", comment = "new_data_frame() copied from ggplot2"))
 Description: Provides 'grid' grobs that fill in a user-defined area with various patterns.  Includes enhanced versions of the geometric and image-based patterns originally contained in the 'ggpattern' package as well as original 'pch', 'polygon_tiling', 'regular_polygon', 'rose', 'text', 'wave', and 'weave' patterns plus support for custom user-defined patterns.
@@ -27,7 +27,7 @@ Imports:
 Suggests:
     ambient,
     knitr,
-    magick,
+    magick (>= 2.7.4),
     ragg (>= 1.2.0),
     rmarkdown,
     svglite (>= 2.1.0),
