--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(patternGrob)
 export(pattern_hex)
 export(pattern_square)
 export(pattern_weave)
+export(reset_image_cache)
 export(star_angle)
 export(star_scale)
 import(grid)
