feat: 'update_alpha()'
* `update_alpha()` updates fill colour and/or pattern transparency.

  + It is a fork of `ggplot2::fill_alpha()` by @teunbrand.
  + It does not depend on `{ggplot2}` or `{scales}`.
  + It does not throw an error with a length one list of a vector of multiple colours.

progress on #67

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: gridpattern
 Type: Package
 Title: 'grid' Pattern Grobs
-Version: 1.1.1
+Version: 1.2.0-1
 Authors@R: c(person("Mike", "FC", role = "aut", comment = "Code/docs adapted from ggpattern"),
         person("Trevor L", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com",
                comment = c(ORCID = "0000-0001-6341-4639")),
-        person("Thomas Lin", "Pedersen", role = "ctb", comment = "new_data_frame() copied from ggplot2"))
+        person("ggplot2 authors", role = "ctb", comment = "some utility functions copied from ggplot2"))
 Description: Provides 'grid' grobs that fill in a user-defined area with various patterns.  Includes enhanced versions of the geometric and image-based patterns originally contained in the 'ggpattern' package as well as original 'pch', 'polygon_tiling', 'regular_polygon', 'rose', 'text', 'wave', and 'weave' patterns plus support for custom user-defined patterns.
 URL: https://trevorldavis.com/R/gridpattern/, https://github.com/trevorld/gridpattern
 BugReports: https://github.com/trevorld/gridpattern/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Depends:
     R (>= 3.4.0)
 Imports:
@@ -26,10 +26,12 @@ Imports:
     utils
 Suggests:
     ambient,
+    ggplot2 (>= 3.5.0),
     knitr,
     magick (>= 2.7.4),
     ragg (>= 1.2.0),
     rmarkdown,
+    scales,
     svglite (>= 2.1.0),
     testthat,
     vdiffr (>= 1.0.6)
