--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ S3method(makeContent,pattern)
 S3method(print,pattern_hex)
 S3method(print,pattern_square)
 S3method(print,pattern_weave)
+S3method(update_pattern_alpha,GridPattern)
+S3method(update_pattern_alpha,GridTilingPattern)
+S3method(update_pattern_alpha,default)
+S3method(update_pattern_alpha,list)
 export(alphaMaskGrob)
 export(clippingPathGrob)
 export(grid.pattern)
@@ -43,6 +47,7 @@ export(pattern_weave)
 export(reset_image_cache)
 export(star_angle)
 export(star_scale)
+export(update_alpha)
 import(grid)
 importFrom(glue,glue)
 importFrom(grDevices,col2rgb)
