--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(names_placeholder)
 export(names_polygon_tiling)
 export(names_square)
 export(names_weave)
+export(patternFill)
 export(patternGrob)
 export(pattern_hex)
 export(pattern_square)
