feat: 'grid.pattern_none()'
* For completeness there is now a `grid.pattern_none()` corresponding to the "none" pattern
  which draws nothing.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(grid.pattern_crosshatch)
 export(grid.pattern_gradient)
 export(grid.pattern_image)
 export(grid.pattern_magick)
+export(grid.pattern_none)
 export(grid.pattern_pch)
 export(grid.pattern_placeholder)
 export(grid.pattern_plasma)
