--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(grid.pattern)
 export(grid.pattern_ambient)
 export(grid.pattern_circle)
 export(grid.pattern_crosshatch)
+export(grid.pattern_fill)
 export(grid.pattern_gradient)
 export(grid.pattern_image)
 export(grid.pattern_magick)
