--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ import(grid)
 importFrom(glue,glue)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,dev.capabilities)
+importFrom(grDevices,dev.capture)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(grDevices,rgb)
