fix: Placeholder type updates
* The following "placeholder" pattern updates (#83):

  + The following placeholder pattern names are now serviced by lucidinternets.com:

    - "cage" and "cagebw"
    - "murray" and "murraybw"
    - "seagal" and "seagalbw"

  + The following placeholder pattern names have been removed since their associated web service no longer works:

    - "lorempixel" and "lorempixelbw" (service unavailable since 2022)
    - "placeimg" and "placeimgbw" ([support officially ended July 2023](https://www.gomasuga.com/placeimg?souce=placeimg))

  + The "dummybw" name now provides a pure black-and-white image (i.e. no grey).
  + Fixes a regression for the "placeholderbw" name where it redirected to the "segal" name instead of "placeholder".

closes #83

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,6 +2,8 @@ destination: "../../websites/R/gridpattern/"
 url: "https://trevorldavis.com/R/gridpattern"
 development:
     mode: auto
+template:
+  bootstrap: 5
 reference:
     - title: "Pattern fills"
       desc: "Pattern fill function"
