feat: 'grid.pattern_aRtsy()'
* New pattern "aRtsy" with corresponding `grid.pattern_aRtsy()` with
  patterns powered by the `{aRtsy}` package (#87).

closes #87

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(update_pattern_alpha,list)
 export(alphaMaskGrob)
 export(clippingPathGrob)
 export(grid.pattern)
+export(grid.pattern_aRtsy)
 export(grid.pattern_ambient)
 export(grid.pattern_circle)
 export(grid.pattern_crosshatch)
@@ -33,6 +34,7 @@ export(grid.pattern_wave)
 export(grid.pattern_weave)
 export(guess_has_R4.1_features)
 export(mean_col)
+export(names_aRtsy)
 export(names_hex)
 export(names_magick)
 export(names_magick_intensity)
