--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: gridpattern
 Type: Package
 Title: 'grid' Pattern Grobs
-Version: 1.2.2
+Version: 1.3.0-1
 Authors@R: c(
         person("Trevor L.", "Davis", role=c("aut", "cre"), email="trevor.l.davis@gmail.com",
                comment = c(ORCID = "0000-0001-6341-4639")),
@@ -27,7 +27,9 @@ Imports:
     utils
 Suggests:
     ambient,
+    aRtsy,
     ggplot2 (>= 3.5.0),
+    gtable,
     knitr,
     magick (>= 2.7.4),
     ragg (>= 1.2.0),
